--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
-version: "2"
+version: '2'
+
+volumes:
+  settings:                          # Only required if using PERSISTENT flag (see below)
 
 services:
-  balena-hello-world:
+
+  browser:
     build: .
-    ports:
-      - "80:80"
+    privileged: true # required for UDEV to find plugged in peripherals such as a USB mouse
+    network_mode: host
+    volumes:
+      - 'settings:/data' # Only required if using PERSISTENT flag (see below)
