--- a/balena.yml
+++ b/balena.yml
@@ -1,26 +1,55 @@
-name: balena-nodejs-hello-world
-type: sw.application
-joinable: false
+name: browser
 description: >-
-  This is a simple skeleton NodeJS server that works on any of the devices supported by balena. It also serves as a boilerplate project for you to get started on building your fleet. Have fun! 
+  a hardware accelerated web browser to present internal and external URLs on a
+  connected display
+
 post-provisioning: >-
+  [![balena](https://github.com/balena-labs-projects/browser/actions/workflows/balena.yml/badge.svg)](https://github.com/balena-labs-projects/browser/actions/workflows/balena.yml)
+
   ## Usage instructions
 
-  Allow a few minutes for your device to download the app. Once it's completed, 
-  the welcome page should be accessible on the public device URL.
+  Include this snippet in your docker-compose.yml file under 'services':
+    
+    ```
+    browser:
+      image: bh.cr/balenalabs/browser-<arch> # where <arch> is one of aarch64, arm32 or amd64
+      privileged: true # required for UDEV to find plugged in peripherals such as a USB mouse
+      network_mode: host
+      volumes:
+        - 'settings:/data' # Only required if using PERSISTENT flag (see below)
+    ```
+
+    To pin to a specific [version](CHANGELOG.md) of this block use:
+
+    ```
+      browser:
+        image: bh.cr/balenalabs/browser-<arch>/<version>
+        privileged: true # required for UDEV to find plugged in peripherals such as a USB mouse
+        network_mode: host
+        ports:
+            - '5011' # management API (optional)
+            - '35173' # Chromium debugging port (optional)
+        volumes:
+          - 'settings:/data' # Only required if using PERSISTENT flag (see below)
+    ```
+version: 2.6.0
+type: sw.block
 assets:
   repository:
     type: blob.asset
     data:
-      url: 'https://github.com/balena-io-examples/balena-nodejs-hello-world/'
+      url: 'https://github.com/balena-labs-projects/browser'
   logo:
     type: blob.asset
     data:
-      url: 'https://raw.githubusercontent.com/balena-io-examples/balena-nodejs-hello-world/master/logo.png'
+      url: 'https://raw.githubusercontent.com/balena-labs-projects/browser/master/logo.png'
 data:
+  defaultDeviceType: raspberrypi3
   supportedDeviceTypes:
-    - generic-x86-64-ext
-    - generic-aarch64
+    - raspberrypi4-64
     - fincm3
-    - beaglebone-black
-    - jetson-tx2
+    - raspberrypi3
+    - raspberrypi3-64
+    - raspberrypi400-64
+    - intel-nuc
+    - genericx86-64-ext
