--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "simple-server-node",
-  "version": "2.0.0",
-  "description": "A simple Expressjs Web server on balena",
-  "main": "server.js",
+    "name": "browserV2",
+    "version": "0.0.1",
+    "description": "balenaBlock that provides a chromium browser wrapped in some balena genius",
+    "main": "index.js",
+    "scripts": {
+      "test": "exit 0"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/balena-labs-projects/browser.git"
+    },
   "private": true,
-  "scripts": {
-    "test" : "echo \"Error: no test specified\"",
-    "start": "node src/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/balena-io-projects/simple-server-node.git"
-  },
-  "keywords": [
-    "webserver",
-    "nodejs",
-    "expressjs"
-  ],
-  "author": "Shaun Mulligan <shaun@balena.io>",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/balena-io-projects/simple-server-node/issues"
-  },
-  "homepage": "https://github.com/balena-io-projects/simple-server-node#readme",
-  "dependencies": {
-    "express": "~4.17.1",
-    "serve-favicon": "~2.5.0"
+    "keywords": [
+      "balena",
+      "browser",
+      "chromium"
+    ],
+    "author": "Phil Wilson <phil@balena.io>",
+    "license": "Apache-2.0",
+    "jshintConfig": {
+      "esversion": 8
+    },
+    "bugs": {
+      "url": "https://github.com/balena-labs-projects/browser/issues"
+    },
+    "homepage": "https://github.com/balena-labs-projects/browser#readme",
+    "dependencies": {
+        "chrome-launcher": "^0.13.4",
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "dateformat": "^3.0.3",
+        "debug": "^4.1.1",
+        "express": "^4.17.1",
+        "bent": "7.3.10",
+        "set-interval-async": "^1.0.34"
+    }
   }
-}
+  
