--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,18 @@ volumes:
   settings:                          # Only required if using PERSISTENT flag (see below)
 
 services:
-
   browser:
-    build: .
+    image: bh.cr/balenalabs/browser-aarch64 # where <arch> is one of aarch64, arm32 or amd64
     privileged: true # required for UDEV to find plugged in peripherals such as a USB mouse
-    network_mode: host
+    ports:
+        - '5011' # management API (optional)
+        - '35173' # Chromium debugging port (optional)
     volumes:
       - 'settings:/data' # Only required if using PERSISTENT flag (see below)
+  audio:
+    image: bh.cr/balenalabs/audio-<arch>
+    privileged: true
+    ports:
+      - 4317:4317
+    environment:
+      AUDIO_OUTPUT: RPI_HEADPHONES
