added arch to audio service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - 'settings:/data' # Only required if using PERSISTENT flag (see below)
   audio:
-    image: bh.cr/balenalabs/audio-<arch>
+    image: bh.cr/balenalabs/audio-aarch64
     privileged: true
     ports:
       - 4317:4317
